--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Tomorrow&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');
-@import url('https://fonts.googleapis.com/css?family=PT+Mono|Poppins&display=swap');
-.homepage{
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lora|Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro&display=swap');
+@import url("https://fonts.googleapis.com/css?family=PT+Mono|Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Poppins|Raleway&display=swap');
+.homepage {
   /* background-color: #0A192F; */
   /* background: url('https://wallpaperplay.com/walls/full/9/3/b/60600.jpg'); */
   background-repeat: no-repeat;
@@ -13,55 +15,103 @@
   margin-top: 5%;
   /* height: 100vh; */
 }
-.homepage2{
-height: 100vh;
-background-color: white;
-align-items: center;
-display: flex;
-justify-content: right;
+.homepage2 {
+  height: 100vh;
+  background-color: white;
+  align-items: center;
+  display: flex;
+  justify-content: right;
 }
-html,body{
+html,
+body {
   margin: 0;
   padding: 0;
-  background-color: #0A192F ;
-
+  background-color: #0a192f;
 }
-.intro1{
-  margin-top: 13%;
+.intro1 {
+  margin-top: 10vw;
   margin-left: 8.5%;
-  color: #64FFDA;
+  color: #64ffda;
   font-size: 2.8vmax;
   transition-delay: 100ms;
-  font-family: 'PT Mono', monospace;
+  font-family: "PT Mono", monospace;
 }
 
-h2{
-color: #CCD6F6;
-font-size: 9vw;
-margin-left:8.5%;
-margin-top: 0;
-margin-bottom: 15px;
-}
-h3{
+h2 {
+  color: #ccd6f6;
+  font-size: 8.5vw;
+  margin-left: 8.5%;
   margin-top: 0;
-  margin-left:8.5%;
-  color:#8892B0;
-  font-size: 7.3vw;
+  font-weight: 9000;
+  /* font-family: 'Ubuntu', sans-serif; */
+  /* font-family: 'Source Code Pro', monospace; */
+  /* font-family: 'Source Sans Pro', sans-serif; */
+  font-family: "Nunito", sans-serif;
+  margin-bottom: 14px;
+}
+h3 {
+  margin-top: 0;
+  margin-left: 8.5%;
+  font-family: "Nunito", sans-serif;
+  color: #8892b0;
+  line-height:01;
+  font-size: 7vw;
+  margin-bottom: 15px;
+}
+.para {
+  margin-top: 8px;
+  font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui,
+    BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
+    color: #8892b0;
+    margin-left: 8.5%;
+    font-size: 2.5vmax;
 }
 /* header style */
 .topnav {
   overflow: hidden;
-  margin-right: 8%;
+  margin-right: 3%;
 }
 
-.topnav a {
-  float:right;
-  font-family: 'Source Code Pro', sans-serif;
-  color: #64FFDA;
+ .topnav a {
+  float: right;
+  font-family: "Source Code Pro", sans-serif;
+  color: #64ffda;
   text-align: center;
   display: flex;
   /* justify-content:sp; */
   padding: 15px 10px;
   text-decoration: none;
-  font-size:18px;
+  font-size: 18px;
+}
+.btnlink{
+  float: right;
+  font-family: "Source Code Pro", sans-serif;
+  color: #64ffda;
+  text-align: center;
+  display: flex;
+  /* justify-content:sp; */
+  padding: 15px 10px;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+/* button css part */
+.button {
+  background-color: #64ffda; /* Green */
+  border: none;
+  border-radius: 8px;
+  padding: 0.00001vw 1vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  font-family: "Source Code Pro", monospace;
+  cursor: pointer;
+  background-color: #0a192f; 
+  color: #64ffda; 
+  margin-left: 8.5% ;
+  margin-top: 5vw;
+  margin-bottom: 15vw;
+  border: 2px solid #64ffda;
 }
